--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Minhas Redes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <h1>Ola, Mundo!</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+
+        <section id="social">
+
+        </section>
+    </main>
 </body>
 </html>
